--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-poppins: var(--font-poppins);
+  --color-primary: #00ced1;
+  --color-secondary: #f25c5c;
+  --color-body: #2d2d2d;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +24,7 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: white;
+  color: #2d2d2d;
+  font-family: var(--font-poppins);
 }
